# pdf-app

./: .env.example  .gitignore  DEPLOY_VERCEL.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: desktop-doctor.mjs
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuthGate.tsx  BrookieMagicLinkPage.tsx  FieldOverlay.tsx  PdfPageCanvas.tsx  SignaturePad.tsx
src/lib/: auth.test.ts  auth.ts  field.test.ts  field.ts  id.ts  pdf.test.ts  pdf.ts  signature.ts  storage.test.ts  storage.ts  supabase.ts  tauri.ts  templates.test.ts  templates.ts
