[package]
name = "ops_pdf_studio"
version = "0.1.0"
description = "Desktop PDF workflow tool for operations teams"
edition = "2021"

[lib]
name = "ops_pdf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
keyring = "3.6.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
